// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit test for the AdditionalSupportDialog component. Should display validation errors after clicking the "Confirm" button. 1`] = `
<div
  aria-describedby="headlessui-description-:r8:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="dialog"
  id="headlessui-dialog-:r6:"
  role="dialog"
>
  <div
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center"
  >
    <div
      class="w-4/5 sm:w-4/5 md:w-3/5 lg:w-2/5 xl:w-2/6 p-2 sm:p-4 transform bg-white shadow-xl rounded-2xl flex flex-col opacity-100 scale-100"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r7:"
    >
      <div
        class="bg-white overflow-auto py-4 px-8 flex flex-col gap-3"
        data-headlessui-state="open"
        id="headlessui-description-:r8:"
      >
        <div
          class="flex justify-start text-xl"
          data-testid="dialog-body"
        >
          <div
            class="w-full"
          >
            <form
              id="wizard-request-additional-support-form"
            >
              <div
                class="pb-12 mb-4 flex flex-col gap-3"
              >
                <div
                  class="text-2xl font-semibold text-dial-sapphire pb-4"
                >
                  Request additional support
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="name"
                >
                  <label
                    class="form-field-label required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="validation-error w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                  <p
                    class="text-sm text-validation-error"
                  >
                    This field is required
                  </p>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="email-address"
                >
                  <label
                    class="form-field-label required-field"
                    for="email-address"
                  >
                    Email Address
                  </label>
                  <input
                    class="validation-error w-full"
                    id="email-address"
                    name="emailAddress"
                    placeholder="Email Address"
                    type="text"
                    value=""
                  />
                  <p
                    class="text-sm text-validation-error"
                  >
                    This field is required
                  </p>
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="message"
                >
                  <label
                    class="form-field-label required-field"
                    for="message"
                  >
                    Message
                  </label>
                  <textarea
                    class="validation-error textarea w-full"
                    id="message"
                    name="message"
                    placeholder="Message"
                    rows="6"
                  />
                  <p
                    class="text-sm text-validation-error"
                  >
                    This field is required
                  </p>
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="flex justify-start gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            form="wizard-request-additional-support-form"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit test for the AdditionalSupportDialog component. Should match snapshot. 1`] = `
<div
  aria-describedby="headlessui-description-:r2:"
  aria-modal="true"
  class="fixed z-100"
  data-headlessui-state="open"
  data-testid="dialog"
  id="headlessui-dialog-:r0:"
  role="dialog"
>
  <div
    class="fixed inset-0 bg-dial-gray opacity-80"
  />
  <div
    class="fixed inset-0 flex items-center justify-center"
  >
    <div
      class="w-4/5 sm:w-4/5 md:w-3/5 lg:w-2/5 xl:w-2/6 p-2 sm:p-4 transform bg-white shadow-xl rounded-2xl flex flex-col"
      data-headlessui-state="open"
      id="headlessui-dialog-panel-:r1:"
    >
      <div
        class="bg-white overflow-auto py-4 px-8 flex flex-col gap-3"
        data-headlessui-state="open"
        id="headlessui-description-:r2:"
      >
        <div
          class="flex justify-start text-xl"
          data-testid="dialog-body"
        >
          <div
            class="w-full"
          >
            <form
              id="wizard-request-additional-support-form"
            >
              <div
                class="pb-12 mb-4 flex flex-col gap-3"
              >
                <div
                  class="text-2xl font-semibold text-dial-sapphire pb-4"
                >
                  Request additional support
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="name"
                >
                  <label
                    class="form-field-label required-field"
                    for="name"
                  >
                    Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="email-address"
                >
                  <label
                    class="form-field-label required-field"
                    for="email-address"
                  >
                    Email Address
                  </label>
                  <input
                    class="w-full"
                    id="email-address"
                    name="emailAddress"
                    placeholder="Email Address"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                  data-testid="message"
                >
                  <label
                    class="form-field-label required-field"
                    for="message"
                  >
                    Message
                  </label>
                  <textarea
                    class="textarea w-full"
                    id="message"
                    name="message"
                    placeholder="Message"
                    rows="6"
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="flex justify-start gap-3 text-xl"
        >
          <button
            class="submit-button"
            data-testid="submit-button"
            form="wizard-request-additional-support-form"
            type="submit"
          >
            Submit
          </button>
          <button
            class="cancel-button"
            data-testid="cancel-button"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
